# lesson-openapi-generater

./: README.md  docker-compose.yml
client/: README.md  package.json
client/pages/: index.tsx
client/src/client/: index.ts
client/src/client/models/: Item.ts  User.ts
client/src/client/services/: DefaultService.ts  ItemsService.ts  UsersService.ts
client/styles/: globals.css
server/: Dockerfile  pyproject.toml
server/fast_api/: main.py
server/fast_api/routers/: items.py  users.py
